# launch

./: Cargo.toml  args.rs  main.rs
src/: config.rs  main.rs  tmux.rs
