[package]
name = "launch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
dirs = "5.0.1"
serde = {version = "1.0.189", features = ["derive"]}
serde_yaml = "0.9.25"

[[bin]]
name = "launch"
path = "main.rs"
