[package]
name = "tmx-launch"
version = "0.1.0"
edition = "2021"
authors = ["Tim Jenkins"]
license = "GPL-3.0"
description = "Another window launcher for tmux, with profiles"
repository = "https://github.com/timjenkins/launch"

[dependencies]
argh = "0.1.12"
dirs = "5.0.1"
serde = {version = "1.0.189", features = ["derive"]}
serde_yaml = "0.9.25"

[[bin]]
name = "tmx-launch"
path = "src/main.rs"
